# hive

./: .mcp.json  ENVIRONMENT_SETUP.md  append_ledger.py  check_ledger.py  docker-compose.yml  hive.ps1  quickstart.ps1  quickstart.sh  update_schema.py  x_rapid_ledger.json
.claude/: settings.json  settings.local.json
aden-tools/: BUILDING_TOOLS.md  Dockerfile  README.md  mcp_server.py  pyproject.toml
aden-tools/src/aden_tools/: __init__.py
aden-tools/src/aden_tools/tools/: __init__.py
aden-tools/src/aden_tools/tools/example_tool/: README.md  __init__.py  example_tool.py
aden-tools/src/aden_tools/tools/file_read_tool/: README.md  __init__.py  file_read_tool.py
aden-tools/src/aden_tools/tools/file_write_tool/: README.md  __init__.py  file_write_tool.py
aden-tools/src/aden_tools/tools/pdf_read_tool/: README.md  __init__.py  pdf_read_tool.py
aden-tools/src/aden_tools/tools/web_scrape_tool/: README.md  __init__.py  web_scrape_tool.py
aden-tools/src/aden_tools/tools/web_search_tool/: README.md  __init__.py  web_search_tool.py
aden-tools/src/aden_tools/utils/: __init__.py  env_helpers.py
aden-tools/tests/: __init__.py  conftest.py  test_env_helpers.py
aden-tools/tests/tools/: __init__.py  test_file_read_tool.py  test_file_write_tool.py  test_pdf_read_tool.py  test_web_scrape_tool.py  test_web_search_tool.py
core/: MCP_BUILDER_TOOLS_GUIDE.md  MCP_INTEGRATION_GUIDE.md  MCP_SERVER_GUIDE.md  README.md
docs/: aden-credential-sync.md  cleanup-plan.md  configuration.md  developer-guide.md  environment-setup.md  roadmap.md
tools/: README.md  pyproject.toml
(+146 files in other folders)
